chore: renomeia page1.html para index.html

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
 
         <div class="iconfooter">
-          <a href="page1.html" title="home">
+          <a href="index.html" title="home">
             <svg
               id="icon-casa"
               xmlns="http://www.w3.org/2000/svg"
